--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,11 @@
+name = "JuliaOulu2020"
+uuid = "23f842cd-6296-44f9-9bb7-b17ff20d3bba"
+authors = ["Carsten Bauer <crstnbr@gmail.com>"]
+version = "0.1.0"
+
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[compat]
+julia = "1"
