--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ GenericLinearAlgebra = "14197337-ba66-59df-a3e3-ca00e7dcff7a"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
