--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GenericLinearAlgebra = "14197337-ba66-59df-a3e3-ca00e7dcff7a"
+Hwloc = "0e44f5e4-bd66-52a0-8798-143a42290a1d"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
