--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,10 @@ AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 ArnoldiMethod = "ec485272-7323-5ecc-a04f-4719b315124d"
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CUDAdrv = "c5f51814-7f29-56b8-a69c-e4d8f6be1fde"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
+CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
 DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
