--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Oulu = "64834c8e-64cc-4137-8a5d-82750b60ec3a"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
